# cbz_game

./: .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  README.md  download_assets.py
assets/materials/: pbr.material.lua
assets/models/cwab/: ImmortalJelly_Loop_GameJam.gltf
assets/models/jewiefish/: ImmortalJelly_Loop_GameJam.gltf
assets/models/twurdle/: ImmortalJelly_Loop_GameJam.gltf
assets/scripts/: enemy.lua  init.lua  zombie.lua
assets/shaders/: blit_texture.slang  cbz.slang  cbz_graphics.slang  cbz_graphics_pbr_forward.slang  cube_map.slang  flow_field.slang  forward.slang  gBuffer.slang  highlight.slang  irradiance_convolution.slang  lighting.slang  lit.slang  skybox.slang  stencilPicker.slang
cubozoa_editor/: CMakeLists.txt
cubozoa_editor/include/lua/: lua_scripting.h
cubozoa_editor/include/renderer/: cubozoa_gltf.h  cubozoa_render_graph.h
cubozoa_editor/src/: cubozoa_editor.cpp  cubozoa_gltf.cpp  cubozoa_render_graph.cpp
editor/: CMakeLists.txt
editor/include/renderer/: cubozoa_gltf.h  cubozoa_render_graph.h  cubozoa_render_types.h
editor/src/: cubozoa_editor.cpp  cubozoa_gltf.cpp  cubozoa_render_graph.cpp
game/: CMakeLists.txt
game/include/rts/: rts.h
game/src/: rts.cpp
game_rts/: CMakeLists.txt
game_rts/include/rts/: rts.h
game_rts/src/: rts.cpp
